--- a/yl-git-server/package.json
+++ b/yl-git-server/package.json
@@ -3,9 +3,10 @@
   "version": "1.0.0",
   "description": "MCP server for automated git operations",
   "type": "module",
-  "main": "index.js",
+  "main": "src/index.js",
   "scripts": {
-    "start": "node index.js"
+    "start": "node src/index.js",
+    "test": "npx @modelcontextprotocol/inspector node src/index.js"
   },
   "dependencies": {
     "@modelcontextprotocol/sdk": "^0.5.0"
