refactor: 重构项目结构并发布到npm
- 重命名项目目录从 yl-git-server 到 yl-mcp-git-server
- 更新 README.md 添加 npm 包信息和详细使用说明
- 修改 mcp_config.json 配置使用 npx 方式运行
- 更新 quick-push 工作流描述
- 删除旧版本文件，准备发布新版本到 npm

--- a/mcp_config.json
+++ b/mcp_config.json
@@ -1,8 +1,8 @@
 {
   "mcpServers": {
-    "yl-git-server": {
-      "command": "node",
-      "args": ["/Users/mac/Desktop/code/yl-mcps/yl-git-server/src/index.js"]
+    "yl-mcp-git-server": {
+      "command": "npx",
+      "args": ["-y", "yl-mcp-git-server"]
     }
   }
 }
