refactor: 将项目名称从 yl-mcp-git-server 改为 yl-mcp-server
- 更新所有相关文件和引用
- 更新 README.md 文档
- 更新 package.json 配置
- 版本号升级到 1.2.0

--- a/mcp_config.json
+++ b/mcp_config.json
@@ -1,8 +1,8 @@
 {
   "mcpServers": {
-    "yl-mcp-git-server": {
+    "yl-mcp-server": {
       "command": "npx",
-      "args": ["-y", "yl-mcp-git-server"]
+      "args": ["-y", "yl-mcp-server"]
     }
   }
 }
